# cini

./: .clang-format  .editorconfig  .travis.yml  CMakeLists.txt  LICENSE  README.md  cini.h  cini.sln
cini/: ReadMe.txt  cini.cpp  cini.h  cini.vcxproj  cini.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h  test.h  test.ini  test_c.c  test_cpp.cpp  test_util.cpp
include/: cini.h
src/: cini.cpp
test/: main.cpp  test.c  test.h  test.ini  test_c.c  test_cpp.cpp  test_util.c  test_util.cpp
